# gpcxx

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  INSTALL.md  README.md  appveyor.yml  cross_over.h  evaluation.h  fitness.h  fitness_prob.h  generate_random_tree.h  genetic_optimizer.h  genetic_optimizer2.h  helpers.h  index.html  main.cpp  main_optimize.cpp  mutation.h  params.json  test_copy.cpp  test_prob.cpp  tree.h  tree_io.h  tree_samples.h
.ci/: build_and_test.sh  build_docs.sh  commit_coveralls.sh  commit_coverity_scan.sh  coveralls.sh  init_thirdparty.sh  run_valgrind.sh  setup_compiler.sh
app/: CMakeLists.txt
app/eval_perf/: CMakeLists.txt  eval_perf.cpp
app/performance/: CMakeLists.txt  eval.hpp  performance1.cpp  performance2.cpp
app/performance2/: CMakeLists.txt  eval.hpp  performance2.cpp
app/sym_reg1/: CMakeLists.txt  eval.hpp  main.cpp
app/symb_reg1/: symb_reg1.cpp
app/symb_reg2/: symb_reg2.cpp
app/symb_reg_de/: CMakeLists.txt  eval.hpp  fitness.hpp  symb_reg_de.cpp
cmake/modules/: BuildTypes.cmake  CheckHeaders.cmake  CreateVersionFile.cmake  FindAmboss.cmake  (+5 more)
devtools/: create_tag.py  dot2pdf.sh  rename_library.py
doc/: CMakeLists.txt  HTML.manifest  catalog.xml.in  concepts.qbk  config.qbk.cmake  details.qbk  details_fitness.qbk  details_io.qbk  details_simplification.qbk  details_trees.qbk  examples_list.qbk  genetic_programming.qbk  getting_started.qbk  gpcxx.qbk  index.html  literature.qbk  tutorial.qbk  tutorial_artificial_ant.qbk  tutorial_gpcxx_in_detail.qbk  tutorial_simplification.qbk  tutorial_symbolic_regression.qbk
doc/concepts/: binary_tree_operator.qbk  concept_template.qbk  cursor.qbk  population_operator.qbk  selector.qbk  tree.qbk  tree_node.qbk  unary_tree_operator.qbk
doc/gpcxx/: __gpcxx_in_detail.html  concepts.html  genetic_programming_basics.html  gpcxx_in_detail.html  index.html  literature.html  performance_results.html  tutorial.html
doc/gpcxx/__gpcxx_in_detail/: evaluation_of_trees.html  genetic_operations_on_trees.html  tree_input.html  tree_output.html
doc/gpcxx/concepts/: binarytreeoperator.html  cursor.html  populationoperator.html  selector.html  treenode.html  unarytreeoperator.html
doc/gpcxx/gpcxx_in_detail/: evaluation_of_trees.html  genetic_operations_on_trees.html  tree_input.html  tree_output.html
doc/gpcxx/tutorial/: artificial_ant.html
examples/: CMakeLists.txt
examples/artificial_ant/: CMakeLists.txt  ant_simulation.hpp  ant_simulation_decorator.hpp  ant_simulation_nodes.hpp  ant_simulation_plots.cpp  ant_simulation_tests_main.cpp  artificial_ant.cpp  artificial_ant_main.cpp  artificial_ant_main_stat.cpp  artificial_ant_plots.sh  board.hpp  main.cpp  nodes.hpp  santa_fe_trail.hpp  simulation.hpp
examples/artificial_ant/detail/: CMakeLists.txt  artificial_ant_plots.cpp  artificial_ant_stat.cpp  artificial_ant_tests.cpp  plots.cpp  plots.makefile  simulation_decorator.hpp  tests_main.cpp
examples/dynamical_system/: CMakeLists.txt  generate_data.cpp  generate_data.hpp  lorenz.cpp  lorenz_multi.cpp  lorenz_reconstruct.cpp  lorenz_single.cpp  program_options.hpp  serialize.cpp  serialize.hpp  tree_types.hpp
performance/: CMakeLists.txt
performance/eval_basic/: CMakeLists.txt  README.md  eval_basic.cpp  eval_basic_ecj_cmp.cpp  eval_basic_ecj_cmp_intrusive.cpp  eval_basic_ecj_cmp_virtual.cpp  eval_basic_intrusive.cpp  eval_basic_virtual.cpp  generate_data.hpp  intrusive_nodes.hpp  nodes.hpp  parser.hpp  performance_eval_basic.cpp  std_function_nodes.hpp
performance/eval_basic_ecj_cmp/: CMakeLists.txt  ecj_exp_parser.hpp  eval_basic_ecj_cmp.cpp  eval_basic_ecj_cmp_intrusive.cpp  eval_basic_ecj_cmp_virtual.cpp  intrusive_nodes.hpp  nodes2.hpp  pagie2-1000i-20g-1t-first_gen.individuals  performance_eval_basic_ecj_cmp.cpp  performance_eval_basic_ecj_cmp_intrusive.cpp  performance_eval_basic_ecj_cmp_virtual.cpp
performance/iterator/: CMakeLists.txt  preorder_iterator.cpp
performance/pagie2/: CMakeLists.txt  pagie2.cpp  pagie2_intrusive.cpp  performance_pagie2.cpp  performance_pagie2_intrusive.cpp  performance_pagie2_intrusive_multi.cpp
test/: CMakeLists.txt
test/app/: CMakeLists.txt  benchmark_problems.cpp  generate_evenly_spaced_test_data.cpp  generate_random_test_data.cpp
test/canonic/: CMakeLists.txt  algebraic_node.cpp  algebras.cpp  canonic_complete.cpp  canonic_test_trees.hpp  group.cpp  left_lift.cpp  order_commutative.cpp  remove_double_inverse_functions.cpp  remove_inserve_operations.cpp  remove_inverse_operations.cpp  sort_commutative.cpp  summarize_constants.cpp
test/common/: generic_generator.hpp  intrusive_node_generator.hpp  test_functions.hpp  test_generator.hpp  test_template.hpp  test_tree.hpp
test/eval/: CMakeLists.txt  adjusted_fitness.cpp  basic_eval.cpp  basic_eval_erc.cpp  hits.cpp  normalized_fitness.cpp  static_eval.cpp  static_eval_erc.cpp
test/generate/: CMakeLists.txt  basic_generate_strategy.cpp  node_generator.cpp  node_generator_generate_strategy.cpp  random_symbol_generator.cpp  uniform_symbol.cpp  uniform_symbol_erc.cpp
test/io/: CMakeLists.txt  bracket.cpp  graphviz.cpp  json.cpp  polish.cpp  population_json.cpp  simple.cpp
test/operator/: CMakeLists.txt  any_genetic_operator.cpp  crossover.cpp  fitness_prob.cpp  multi_mutation.cpp  mutation.cpp  one_point_crossover_strategy.cpp  operator_result.cpp  point_mutation.cpp  random_selector.cpp  reproduce.cpp  simple_mutation_strategy.cpp  tournament_selector.cpp
test/stat/: CMakeLists.txt  node_statistics.cpp
test/tree/: CMakeLists.txt  basic_growing_tree.cpp  basic_nary_tree.cpp  basic_tree.cpp  complete_linked_tree_structure.cpp  find_node_to_index.cpp  general_tree.cpp  generate_random_linked_tree.cpp  inorder_iterator.cpp  intrusive_tree.cpp  linked_node.cpp  linked_node_tree.cpp  postorder_iterator.cpp  preorder_iterator.cpp  random_symbol_generator.cpp  recursive_tree.cpp  transform_tree.cpp  tree_base.cpp
test/util/: CMakeLists.txt  array_unpack.cpp  create_random_indices.cpp  exception.cpp  iterate_until.cpp  parallel_algorithm.cpp  sort_indices.cpp  version.cpp
(+254 files in other folders)
