# Date: 2014-07-18
# Author: Gerard Choinka (gerard.choinka+gpcxx@gmail.com)

add_executable ( artificial_ant         artificial_ant_main.cpp )
add_executable ( artificial_ant_stat    artificial_ant_main_stat.cpp )
add_executable ( artificial_ant_tests   ant_simulation_tests_main.cpp )
add_executable ( artificial_ant_plots   ant_simulation_plots.cpp )