# Date: 2013-09-12
# Author: Karsten Ahnert (karsten.ahnert@gmx.de)

add_executable ( eval_basic_ecj_cmp
                 eval_basic_ecj_cmp.cpp )
add_executable ( eval_basic_ecj_cmp_virtual
                 eval_basic_ecj_cmp_virtual.cpp )
add_executable ( eval_basic_ecj_cmp_intrusive
                 eval_basic_ecj_cmp_intrusive.cpp )