# Date: 2013-09-12
# Author: Karsten Ahnert (karsten.ahnert@gmx.de)

add_executable ( performance_eval_basic_ecj_cmp performance_eval_basic_ecj_cmp.cpp )
add_executable ( performance_eval_basic_ecj_cmp_virtual performance_eval_basic_ecj_cmp_virtual.cpp )
add_executable ( performance_eval_basic_ecj_cmp_virtual2 performance_eval_basic_ecj_cmp_virtual2.cpp )