# CMakeLists.txt
# Date: 2015-01-31
# Author: Karsten Ahnert (karsten.ahnert@gmx.de)
#
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or
# copy at http://www.boost.org/LICENSE_1_0.txt)
#

# include_directories ( /home/karsten/boost/range-v3/include/ )

add_executable ( preorder_iterator preorder_iterator.cpp )